--- a/static/style.css
+++ b/static/style.css
@@ -23,14 +23,25 @@
     padding: 36px 16px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
-    text-decoration: none;
+    /*text-decoration: none!important;*/
 }
 
-li > a {
+.body-link {
     font-family: Arial, Gadget, sans-serif;
     line-height: 2;
     color: #F6852F;
+    /*text-decoration: none!important;*/
     font-size: 24px;
+}
+
+li > a{
+    text-decoration: none!important;
+    color: white!important;
+}
+
+p > a {
+    text-decoration: none!important;
+    color: #F6852F!important;
 }
 
 .logo {
@@ -80,7 +91,7 @@ li > a {
     padding: 7%;
     width: 100%;
     box-sizing: border-box;
-    height: 1500px;
+    height: 1680px;
 }
 
 .spreadsheet {
