Procfile for Heroku Deployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     <div class="navigation-bar">
         <ul class="navigation-bar">
             <li class="navigation-bar-item"><a href="#home">HOME</a></li>
-            <li class="navigation-bar-item"><a href="#demo">DEMO</a></li>
+            <li class="navigation-bar-item"><a href="#demo">VIZ LAB</a></li>
             <li class="navigation-bar-item"><a href="#contact">CONTACT</a></li>
             <li><div class="logo"><img src="{{ url_for('static', filename='Nuclear_Court Science Logo.png') }}"
                                        width="200"></div></li>
@@ -23,12 +23,13 @@
     <div class="body-section-top" id="home">
         <h2 class="title">WHO WE ARE</h2>
         <p class="body-text">
-            Court Science is a non-profit organization that aims to bridge the gap
-            between STEM and sports by making the power of Data Science accessible to basketball enthusiasts worldwide,
-            through our online <a class="body-link" href="#demo">Visualization Lab</a> and community initiatives. In light
-            of COVID-19, we have shifted all of our outreach efforts remotely (Youth Basketball Data Camp coming soon!),
-            and hope our simple web-based tools can empower you to explore new dimensions of your favourite sport through
-            a data lens, while learning something new about STEM. It's as easy as a few clicks and you're on your way!
+            Court Science is a non-profit organization that aims to bridge the gap between STEM and sports by making the
+            power of Data Science accessible to basketball enthusiasts worldwide, through our online interactive data
+            visualization platform called the <a class="body-link" href="#demo">Visualization Lab</a> and community initiatives.
+            In light of COVID-19, we have shifted all of our outreach efforts online (Youth Basketball Data Camp coming soon!),
+            and hope that our simple yet powerful tools can empower you to explore new dimensions of your favourite sport
+            through a STEM lens, while learning something new about Data Science. It's as easy as a few clicks and you're on
+            your way!
         </p>
     </div>
     <div class="body-section-2" id="demo">
