Fixed Reset Bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -139,7 +139,7 @@
     const dropDown = document.getElementById("drop-down");
     const radar_input = document.getElementById('radar-input');
     const bar_input = document.getElementById('bar-input');
-    var img_src = "Radar-Chart.png";
+    var img_src = "static/Radar-Chart.png";
     //var dataFrame = [];
     var target_id = "";
     var max_players = 3;
@@ -468,7 +468,6 @@
         inputElement.disabled = false;
         papaParse(inputCSV);
         document.getElementById('chart-div').remove();
-        img_src = 'static/' + img_src;
         document.getElementById('right-div').insertAdjacentHTML('beforeend', "<div id='chart-div' style='float: right; width: 100%; margin-top: 30px;'><img id=\"starter-img\" height='550' style=\"float: right; width: 95%\"></div>");
         document.getElementById('starter-img').src = img_src;
     }
@@ -511,7 +510,7 @@
             min_stats = 3;
             min_players = 1;
             image_display.src = 'static/Radar-Chart.png';
-            img_src = "Radar-Chart.png";
+            img_src = "static/Radar-Chart.png";
             if(stats >= min_stats && stats <= max_stats && players >= min_players && players <= max_players) {
                 court_science_magic(inputCSV)
             } else if((stats > 0 && stats < min_stats) || (stats > max_stats) || (players > 0 && players < min_players) || (players > max_players)) {
@@ -534,7 +533,7 @@
             min_stats = 1;
             min_players = 2;
             image_display.src = 'static/Bar-Chart (3).png';
-            img_src = "Bar-Chart (3).png";
+            img_src = "static/Bar-Chart (3).png";
             if(stats >= min_stats && stats <= max_stats && players >= min_players && players <= max_players) {
                 court_science_magic(inputCSV)
             } else if((stats > 0 && stats < min_stats) || (stats > max_stats) || (players > 0 && players < min_players) || (players > max_players) || (stats > 0 && players < min_players)) {
