--- a/static/style.css
+++ b/static/style.css
@@ -116,7 +116,7 @@ p > a {
 }
 
 .div-spacing {
-  margin-top: 30px;
+  margin-top: 3vh;
 }
 
 input[type=checkbox] {
@@ -133,14 +133,15 @@ input[type=checkbox] {
 
 .drop-zone {
     width: 100%;
-    height: 150px;
+    height: 15vh;
     border: 2px solid black;
     background: lightgrey;
 }
 
 .div-container {
     width: 100%;
-    height: 200px;
+    height: 25vh;
+    max-height: 200px;
     border: 2px solid black;
     overflow-y:scroll;
 }
@@ -179,11 +180,12 @@ input[type=checkbox] {
     vertical-align: middle;
 }
 
+
 .spacing {
-    margin-bottom: 50px;
+    margin-bottom: 5vh;
 }
 
-/* HIDE RADIO */
+
 [type=radio] {
   position: absolute;
   opacity: 0;
@@ -191,27 +193,33 @@ input[type=checkbox] {
   height: 0;
 }
 
-/* IMAGE STYLES */
+
 [type=radio] + img {
   cursor: pointer;
 }
 
-/* CHECKED STYLES */
+
 [type=radio]:checked + img {
   outline: 4px solid dodgerblue;
 }
 
 .searchInput {
-  background-image: url('search-icon.png'); /* Add a search icon to input */
+  background-image: url('search-icon.png');
   background-size: 8% 25px;
-  background-position: 5px 12px; /* Position the search icon */
-  background-repeat: no-repeat; /* Do not repeat the icon image */
-  width: 100%; /* Full-width */
-  font-size: 16px; /* Increase font-size */
-  padding: 10px 20px 10px 50px; /* Add some padding */
+  background-position: 5px 12px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 2% 20px 2% 50px;
   border-radius: 25px;
-  border: 2px solid black; /* Add a grey border */
-  margin-bottom: 12px; /* Add some space below the input */
+  border: 2px solid black;
+  margin-bottom: 12px;
+}
+
+.display-chart {
+    float: right;
+    width: 95%;
+    height: 60vh;
 }
 
 .svg-container {
