--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div id='right-div' style='float: left; width: 65%; height: 100%;'>
-            <div id='chart-selection' style="float: left; width: 20%; margin-right: 5%; margin-top: 3%;">
+            <div id='chart-selection' style="float: left; width: 20%; margin-right: 5%; margin-top: 3vh;">
             <p style="text-align: center; font-size: 24px;"><b>Chart Type</b></p>
             <div style="float:left; width: 42%; height: 80px;">
             <label>
