--- a/static/style.css
+++ b/static/style.css
@@ -54,6 +54,13 @@ li > a {
     width: 100%;
 }
 
+.legend-title {
+    /* font-family: "Arial Black", Gadget, sans-serif; */
+    text-align: center;
+    font-size: 12px;
+    fill:#404040;
+}
+
 .title {
     font-family: "Arial Black", Gadget, sans-serif;
     text-align: center;
@@ -207,13 +214,13 @@ input[type=checkbox] {
     display: inline-block;
     position: relative;
     width: 100%;
-    padding-bottom: 100%; /* aspect ratio */
+    padding-bottom: 100%; 
     vertical-align: top;
     overflow: hidden;
   }
   .svg-content-responsive {
     display: inline-block;
     position: absolute;
-    top: 10px;
-    left: 0;
+    top: 20px;
+    left: 10px;
   }
