--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@
 
 .navigation-bar-item {
     float: right;
+    margin-right: 0.5%;
     cursor: pointer;
 }
 
@@ -45,6 +46,7 @@ p > a {
 }
 
 .logo {
+    margin-left: 4%;
     float: left;
     padding: 0%;
 }
