Integration of charts fitting in SVG containers and added tooltips + bar chart by stat instead of by player (toggle coming soon)

--- a/static/style.css
+++ b/static/style.css
@@ -51,14 +51,14 @@ p > a {
 
 .body-section-1 {
     background-color: #f2f2f2;
-    padding: 7%;
+    padding: 25px;
     box-sizing: border-box;
 }
 
 .body-section-top {
     background-color: #f2f2f2;
-    padding-top: 10%;
-    padding-bottom: 7%;
+    padding-top: 7%;
+    padding-bottom: 25px;
     padding-left: 7%;
     padding-right: 7%;
     box-sizing: border-box;
@@ -75,30 +75,52 @@ p > a {
 .title {
     font-family: "Arial Black", Gadget, sans-serif;
     text-align: center;
-    font-size: 40px;
+    font-size: 32px;
+}
+
+.big-label {
+    font-family: Arial, Gadget, sans-serif;
+    text-align: left;
+    font-size: 16px;
+    margin-bottom: 5px;
 }
 
 .body-text {
     font-family: Arial, Gadget, sans-serif;
-    text-align: center;
+    text-align: left;
     line-height: 2;
     color: #333333;
     font-size: 24px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.ol {
+    list-style-type: none;
+    padding: 0;
+    border: 1px solid #ddd;
+  }
+
+.ol li {
+    padding: 8px 16px;
+    border-bottom: 1px solid #ddd;
 }
 
 .list-text {
     font-family: Arial, Gadget, sans-serif;
     line-height: 2;
     color: #333333;
-    font-size: 24px;
+    font-size: 14px;
+    text-align: justify;
+    padding-right: 5%;
 }
 
 .body-section-2 {
     background-color: white;
-    padding: 7%;
+    padding: 25px;
     width: 100%;
     box-sizing: border-box;
-    height: 1680px;
+    height: 1480px;
 }
 
 .spreadsheet {
@@ -113,7 +135,7 @@ p > a {
     margin-right: auto;
     width: 25%;
     height: 25%;
-    padding: 5%;
+    padding: 20px;
 }
 
 .form-text {
@@ -250,3 +272,16 @@ input[type=checkbox] {
     top: 20px;
     left: 10px;
   }
+
+div.tooltip {	
+    position: absolute;			
+    text-align: center;			
+    width: xx;					
+    height: xx;					
+    padding: 2px;				
+    font: 18px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;			
+}
