--- a/static/style.css
+++ b/static/style.css
@@ -251,6 +251,19 @@ input[type=checkbox] {
   .svg-content-responsive {
     display: inline-block;
     position: absolute;
-    top: 10px;
-    left: 0;
+    top: 20px;
+    left: 10px;
   }
+
+div.tooltip {	
+    position: absolute;			
+    text-align: center;			
+    width: xx;					
+    height: xx;					
+    padding: 2px;				
+    font: 18px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;			
+}
