center text in contact us

--- a/templates/index.html
+++ b/templates/index.html
@@ -128,7 +128,7 @@
     </div>
     <div id="contact" class="body-section-1">
         <h2 class="title">GET IN TOUCH</h2>
-        <p class="body-text">
+        <p class="body-text" style="text-align: center;">
             We would love to hear from you, send us a shout below!
         </p>
         <a href="mailto:contact@courtscience.ca">
