--- a/templates/index.html
+++ b/templates/index.html
@@ -151,12 +151,12 @@
 
 
     function allowDropStats(ev) {
-        console.log(target_id);
+        //console.log(target_id);
         if (document.getElementById('drop-stats').children.length<max_stats && target_id.includes('stat')) ev.preventDefault();
     }
 
     function allowDropPlayers(ev) {
-        console.log(target_id);
+        //console.log(target_id);
         if (document.getElementById('drop-players').children.length<max_players && target_id.includes('name')) ev.preventDefault();
     }
 
@@ -176,7 +176,7 @@
     function drop(ev) {
         ev.preventDefault();
         var data = ev.dataTransfer.getData("text");
-        console.log(data);
+        //console.log(data);
         ev.target.appendChild(document.getElementById(data));
         court_science_magic(inputCSV);
     }
@@ -193,7 +193,8 @@
                 obj[data[0][col]] = data[i][col];
             }
             obj['Plot'] = rows.includes(i);
-            obj_df.push(obj)
+            obj_df.push(obj);
+            console.log(obj_df);
         }
         return obj_df;
     }
@@ -217,12 +218,12 @@
     // Parse JSON string into object
         var JSON_parsed = JSON.parse(response);
         var stat_to_search = stat.toUpperCase();
-        console.log(JSON_parsed.hasOwnProperty(stat_to_search));
+        //console.log(JSON_parsed.hasOwnProperty(stat_to_search));
         if (JSON_parsed.hasOwnProperty(stat_to_search)) {
             document.getElementById(id).title = JSON_parsed[stat_to_search];
-            console.log(document.getElementById(id).title);
+            //console.log(document.getElementById(id).title);
         }
-        console.log(JSON_parsed);
+        //console.log(JSON_parsed);
     });
     }
 
@@ -260,8 +261,8 @@
         }
         */
 
-        console.log(lst_stats);
-        console.log(lst_players);
+        //console.log(lst_stats);
+        //console.log(lst_players);
 
         var obj_df = CSV_to_parsed_df(data, lst_players, lst_stats);
         console.log(obj_df);
@@ -316,9 +317,11 @@
                 if(stats >= min_stats && stats <= max_stats && players >= min_players && players <= max_players) {
                     main(results['data']);
                 }
+                /*
                 else {
                     console.log("Please select " + min_stats + "-" + max_stats + " stats and " + min_players + "-" + max_players + " players to plot!");
                 }
+                */
             }
         });
     }
@@ -330,7 +333,7 @@
                 let df = results['data'];
                 window.num_players = df.length - 1;
                 let headers = df[0];
-                console.log(headers);
+                //console.log(headers);
                 let sample_data = df[1];
                 let num_str = "0123456789";
                 let headers_filtered = [];
@@ -353,7 +356,7 @@
                     alert("Please include a 'player name' column in your spreadsheet to identify players!")
                 } else {
                     window.num_stats = headers_filtered.length;
-                    console.log(headers_filtered);
+                    //console.log(headers_filtered);
 
                     //let inner_div = document.getElementById("inner-div");
                     //inner_div.remove();
@@ -442,7 +445,7 @@
                         let name = "'name" + String(count) + "'";
                         let name_attr = "'" + player_name + "'";
                         let string_to_add = "<button type='button' style='margin-right: 2%; margin-bottom: 2%' class='btn btn-primary' ondragover='disableDrop(event)' ondrop='disableDrop(event)' name=" + name_attr + " draggable='true' ondragstart='drag(event)' id=" + name + " value=" + "'"+ i + "'>" + player_name + "</button>";
-                        console.log(string_to_add);
+                        //console.log(string_to_add);
                         players_drag.insertAdjacentHTML('beforeend', string_to_add);
                         count++;
                     }
